Fix More Link Alignment

--- a/scss/parts/_defaults.scss
+++ b/scss/parts/_defaults.scss
@@ -474,7 +474,7 @@ img.alignnone,
 .more-link {
     color: $white;
     display: table;
-    margin: 30px auto 0;
+    margin: 15px auto;
     text-decoration: none !important;
     
     &:hover,
